manifests/media/vpn/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
  namespace: vpn
spec:
  selector:
    app: qui
  ports:
    - name: qui
      port: 7476
      targetPort: 7476
